--- a/Code/project.ipynb
+++ b/Code/project.ipynb
@@ -464,15 +464,38 @@
     "    img = Image.v2.imread(i)\n",
     "    image.append(img)\n",
     "\n",
-    "Image.mimsave('camera_motion.gif', image, fps= 10)"
+    "Image.mimsave('../images/camera_motion.gif', image, fps= 10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Camera motion visualisation\n",
-    "![camera_trajectory](camera_motion.gif \"camera motion\")"
+    "### Camera motion visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"../images/camera_motion.gif\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Image as im\n",
+    "im(url='../images/camera_motion.gif')  \n"
    ]
   }
  ],
