final version of code

--- a/Code/project_final.ipynb
+++ b/Code/project_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ebba6cf4",
+   "id": "dcc73505",
    "metadata": {},
    "source": [
     "## Object-based Mapping for Mobile Robots in Indoor Environments\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96adb565",
+   "id": "0e56910f",
    "metadata": {},
    "source": [
     "#### Packages:\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6de17fc",
+   "id": "0d3e0d9b",
    "metadata": {},
    "source": [
     "#### Imports"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "87a248dd",
+   "id": "1823a358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad78419",
+   "id": "a0c6f87f",
    "metadata": {},
    "source": [
     "## Loading poses with localization (tf_echo map -> camera_rgb_frame)"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec43ebb2",
+   "id": "ab63b9d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b16d2b9",
+   "id": "2fd9261a",
    "metadata": {},
    "source": [
     "### Load the occupancy grid and visualise the poses on the occupancy grid to see the trajectory of robot"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "29d88ccc",
+   "id": "b7e7ee6d",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66c9893f",
+   "id": "424aedc7",
    "metadata": {},
    "source": [
     "### Load an rgb image and create the array of pixel coordinates"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f308b9ee",
+   "id": "0b78ec20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1926300",
+   "id": "43925b37",
    "metadata": {},
    "source": [
     "### initialise the values for camera intrinsic matrix"
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "48de9802",
+   "id": "008fd282",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bdf42e2",
+   "id": "759c7720",
    "metadata": {},
    "source": [
     "### Convert the pixel coordinates into camera rgb frame. \n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9ed1dc08",
+   "id": "c65e5235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e31ced8a",
+   "id": "5efeda18",
    "metadata": {},
    "source": [
     "### create matrix of depth values for all the images"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a03e788d",
+   "id": "e7d22689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "685e9c02",
+   "id": "67b8366f",
    "metadata": {},
    "source": [
     "### Create function to make homogenous transformation matrix"
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ae6ac1e2",
+   "id": "34f502dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e88f41da",
+   "id": "a8b85bf4",
    "metadata": {},
    "source": [
     "### create matrix of transformation from canonical frame to optical frame"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "da8e84a1",
+   "id": "3e60a2a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97784b2d",
+   "id": "df80059c",
    "metadata": {},
    "source": [
     "### create matrix of tranformation matrix from camera frame to map frame"
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "02e4d89f",
+   "id": "d7cb28f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83ac2385",
+   "id": "d2bf9182",
    "metadata": {},
    "source": [
     "#### loading the labels\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "140c26a6",
+   "id": "0fe2b692",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,129 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36dfaf34",
+   "id": "d7de44e2",
+   "metadata": {},
+   "source": [
+    "### Previously tested strategies"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "81014a73",
+   "metadata": {},
+   "source": [
+    "occ_grid_colorized = np.ones((occ_grid.shape[0], occ_grid.shape[1], 3), np.uint8) * 255\n",
+    "mask_height = True\n",
+    "occ_labels = {}\n",
+    "for i in range(z.shape[0]):\n",
+    "    zi = z[i]\n",
+    "    \n",
+    "    #multiply depth\n",
+    "    \"\"\"The depth sensor has a limit of 5 meters. so in order to account for false segmentation values thet may come\n",
+    "    up due to this cutoff\"\"\"\n",
+    "    depth_mask = np.squeeze(zi <= 4.5)\n",
+    "    \n",
+    "    #depth filtered camera_rgb_frame pixel coordinates\n",
+    "    camera_rgb_frame_z = np.zeros_like(camera_rgb_frame)\n",
+    "    camera_rgb_frame_z[depth_mask] = camera_rgb_frame[depth_mask] * zi[depth_mask]\n",
+    "    \n",
+    "    #convert camera_rgb_frame into homogenous dimension\n",
+    "    ones = np.ones((z.shape[1],1))\n",
+    "    camera_rgb_frame_homo = np.column_stack((camera_rgb_frame_z,ones))\n",
+    "\n",
+    "    #transform from canonical frame to optical frame ie camera frame\n",
+    "    camera_frame = H @ camera_rgb_frame_homo.T\n",
+    "\n",
+    "    #transform from camera frame to map frame\n",
+    "    map_frame = (n_r_t[i] @ camera_frame).T\n",
+    "    \n",
+    "    # Filtering out all the points that are outside a range of optical axis height\n",
+    "    if(mask_height):\n",
+    "        map_height_mask = (map_frame[:,2] <= 0.6675) & (map_frame[:,2] >= 0.0)\n",
+    "        map_frame_masked = map_frame[map_height_mask]\n",
+    "        map_frame_xy = map_frame_masked[:,[0,1]]\n",
+    "        \n",
+    "    #convert the coordinates from spatial coordinates (x,y) to ij coordinates to plot in occupancy grid\n",
+    "    else:\n",
+    "        map_frame_xy = map_frame[:,[0,1]]\n",
+    "    map_frame_xy = map_frame_xy.copy(order='C')\n",
+    "    map_frame_ij = map.xy_to_ij(map_frame_xy)\n",
+    "    mask = occ_grid[map_frame_ij[:,0], map_frame_ij[:,1]] == 1\n",
+    "    \n",
+    "    label = np.load(labels[i])\n",
+    "    for j in range(map_frame_ij.shape[0]):\n",
+    "\n",
+    "        if(mask[j]):\n",
+    "            key = f\"key_{map_frame_ij[j,0]}_{map_frame_ij[j,1]}\"\n",
+    "        \n",
+    "            if (key in occ_labels):            \n",
+    "                # adding probabilities\n",
+    "                occ_labels[key]= [old_label + new_label for old_label, new_label in zip(occ_labels[key] , label[j])]\n",
+    "                prob_sum = np.sum(occ_labels[key])\n",
+    "                occ_labels[key] = [probability / prob_sum for probability in occ_labels[key]]\n",
+    " \n",
+    "            else:\n",
+    "                occ_labels[key] = label[j]"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "fcbdeebc",
+   "metadata": {},
+   "source": [
+    "occ_grid_colorized = np.ones((occ_grid.shape[0], occ_grid.shape[1], 3), np.uint8) * 255\n",
+    "mask_height = False\n",
+    "occ_labels = {}\n",
+    "for i in range(z.shape[0]):\n",
+    "    zi = z[i]\n",
+    "    \n",
+    "    #multiply depth\n",
+    "    \"\"\"The depth sensor has a limit of 5 meters. so in order to account for false segmentation values thet may come\n",
+    "    up due to this cutoff\"\"\"\n",
+    "    depth_mask = np.squeeze(zi <= 4.5)\n",
+    "    \n",
+    "    #depth filtered camera_rgb_frame pixel coordinates\n",
+    "    camera_rgb_frame_z = np.zeros_like(camera_rgb_frame)\n",
+    "    camera_rgb_frame_z[depth_mask] = camera_rgb_frame[depth_mask] * zi[depth_mask]\n",
+    "    \n",
+    "    #convert camera_rgb_frame into homogenous dimension\n",
+    "    ones = np.ones((z.shape[1],1))\n",
+    "    camera_rgb_frame_homo = np.column_stack((camera_rgb_frame_z,ones))\n",
+    "\n",
+    "    #transform from canonical frame to optical frame ie camera frame\n",
+    "    camera_frame = H @ camera_rgb_frame_homo.T\n",
+    "\n",
+    "    #transform from camera frame to map frame\n",
+    "    map_frame = (n_r_t[i] @ camera_frame).T\n",
+    "    \n",
+    "    if(mask_height):\n",
+    "        map_height_mask = (map_frame[:,2] <= 0.145) & (map_frame[:,2] >= 0.125)\n",
+    "        map_frame_masked = map_frame[map_height_mask]\n",
+    "        map_frame_xy = map_frame_masked[:,[0,1]]\n",
+    "    \n",
+    "    else:\n",
+    "        map_frame_xy = map_frame[:,[0,1]]\n",
+    "        \n",
+    "    #convert the coordinates from spatial coordinates (x,y) to ij coordinates to plot in occupancy grid\n",
+    "    map_frame_xy = map_frame_xy.copy(order='C')\n",
+    "    map_frame_ij = map.xy_to_ij(map_frame_xy)\n",
+    "    mask = occ_grid[map_frame_ij[:,0], map_frame_ij[:,1]] == 1\n",
+    "    label = np.load(labels[i])\n",
+    "    for j in range(map_frame_ij.shape[0]):\n",
+    "\n",
+    "        if(mask[j]):\n",
+    "            key = f\"key_{map_frame_ij[j,0]}_{map_frame_ij[j,1]}\"\n",
+    "\n",
+    "            if (key in occ_labels):\n",
+    "                occ_labels[key]= np.vstack((occ_labels[key], np.argmax(label[j])))\n",
+    "            else:\n",
+    "                occ_labels[key] = np.argmax(label[j])\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5b4bb18",
    "metadata": {},
    "source": [
     "### Final loop\n",
@@ -347,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "564e76e0",
+   "id": "16b8d7a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0a3d1d1",
+   "id": "91ca3953",
    "metadata": {},
    "source": [
     "### Functions creating set of colors for the labels"
@@ -428,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "585b80c5",
+   "id": "497bc0e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1047988",
+   "id": "ecd5c84b",
    "metadata": {},
    "source": [
     "#### SUNRGBD"
@@ -471,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e001e411",
+   "id": "f9e803e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86a38700",
+   "id": "b02c4520",
    "metadata": {},
    "source": [
     "### Assigning label to occupancy grid based on the highest probability"
@@ -527,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a5b45035",
+   "id": "61c214d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b13bc1e0",
+   "id": "2cf6b4c4",
    "metadata": {},
    "source": [
     "### Plotting the colorized occupancy grid"
@@ -552,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "24107952",
+   "id": "30ac2105",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +716,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e188f25c",
+   "id": "0585775a",
    "metadata": {},
    "source": [
     "### Create new occupancy grid for creating polygon maps"
@@ -603,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aee3e5c8",
+   "id": "37e1468f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "05e284f2",
+   "id": "a4f2add6",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "738e8219",
+   "id": "de2b9df6",
    "metadata": {},
    "source": [
     "### Viewing the polygon contours in the new occupancy grid"
@@ -659,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "20a74060",
+   "id": "ac7aff7d",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f229ea",
+   "id": "fc14fd21",
    "metadata": {},
    "source": [
     "### labels based on polygon\n",
@@ -703,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ef1d382a",
+   "id": "0e5326ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00b5375a",
+   "id": "8f5a63ed",
    "metadata": {},
    "source": [
     "### Assigning global label for a given polygon\n",
@@ -740,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "574ec8e2",
+   "id": "9941baaf",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +1003,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2856dcc",
+   "id": "3ea29d13",
    "metadata": {},
    "source": [
     "### Assigning colour to the polygon based on the polygon label"
@@ -890,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3d734fa0",
+   "id": "83136c74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1db60eec",
+   "id": "3d1c8b31",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d79a5f16",
+   "id": "a45db8e6",
    "metadata": {},
    "source": [
     "### Loading annotation and creating masks"
@@ -959,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f692d647",
+   "id": "bfb574cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5e070190",
+   "id": "51006157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "311f4494",
+   "id": "d9e9c988",
    "metadata": {},
    "source": [
     "### Assigning label colours for masks"
@@ -1058,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ddc5dfe5",
+   "id": "f4dc432c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b5799ae7",
+   "id": "ea2ae6bd",
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d1adaa",
+   "id": "68ebdc54",
    "metadata": {},
    "source": [
     "### Creating groundtruth from masks"
@@ -1118,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1d9a316f",
+   "id": "84c6b46c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "46a3b8ae",
+   "id": "44fb182b",
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed17d87",
+   "id": "fefa03ed",
    "metadata": {},
    "source": [
     "### calculate iou and miou"
@@ -1169,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4199c0",
+   "id": "73280923",
    "metadata": {},
    "source": [
     "##### non polygon filtered"
@@ -1178,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b73e2502",
+   "id": "00c494e7",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1498,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "6674a44b",
+   "id": "08bee1e7",
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7223af9",
+   "id": "62e00c7c",
    "metadata": {},
    "source": [
     "#### polygon filtered"
@@ -1404,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "cdcd25a4",
+   "id": "73677998",
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f054860b",
+   "id": "00b133c9",
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24727091",
+   "id": "54b7f5c4",
    "metadata": {},
    "outputs": [],
    "source": []
